Fixed Navbar layout, fixed marquee images not showing up, fixed general layout WIP

--- a/main/style.css
+++ b/main/style.css
@@ -10,7 +10,3 @@
 body {
     font-family: "Open Sans", sans-serif;
 }
-
-.diviso-3{
-   width: calc(100vw/3);
-}
